Minor font-size fix. Partial renamed. Updated spacing for headers

--- a/source/assets/stylesheets/_articles.scss
+++ b/source/assets/stylesheets/_articles.scss
@@ -18,7 +18,6 @@
   h5,
   h6 {
     margin-top: 0; // .mt0
-    margin-bottom: 0.5rem; // .mb1
     letter-spacing: 0.5px; // .spaced
     line-height: 1.25; //.line-height-smaller
 
@@ -27,13 +26,16 @@
     }
   }
 
+  h1,
+  h2,
+  h3 { line-height: $line-height-title; }
+
   h4,
   h5,
   h6 { text-transform: uppercase; }
 
   h1:first-of-type {
     margin-top: 3rem; // .mt6
-    margin-bottom: 1rem; // .mb2
 
     @media screen and (min-width: $tablet) {
       margin-top: 6rem; // .mt12
@@ -43,7 +45,6 @@
 
   h1 {
     font-size: $font-title;
-    line-height: $line-height-title;
 
     @media screen and (min-width: $desktop) {
       font-size: $font-triple;
@@ -57,6 +58,10 @@
       font-size: $font-title;
     }
   }
+
+  h4 { font-size: $font-large; }
+  h5 { font-size: $font-base; }
+  h6 { font-size: $font-small; }
 
   p {
     margin-top: 0; // .mt0
